examples/errors/any_outside_declare/main.lc

function returnAny(): any {
  "hello"
}

function main() {
  returnAny();
}
